# veiland

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  battery.py  flake.nix  shell.nix
.github/workflows/: ci.yml  packages.yml  site.yml
docs/: architecture.md  auth-state-feedback-plan.md  config.md  fractional-scaling-plan.md  hotplug-refactor-plan.md  m12-text-quality-plan.md  plugin-api.md  plugin-authoring-claude.md  plugins.md  protocol.md  sakura-plugin-plan.md
docs/diagrams/: buffer-lifecycle.md  component.md
docs/examples/: avatar.toml  battery_cairo.toml  battery_python.toml  battery_svg.toml  blobs.toml  bluetooth.toml  boxes.toml  embers.toml  ethernet.toml  fireflies.toml  gradient.toml  hotplug-repro.toml  label.toml  m10-label.toml  m11-shinkai.toml  m6-boxes.toml  m9-password.toml  markup.toml  now_playing.toml  now_playing_star.toml  parallax.toml  password.toml  rain.toml  raymarcher.toml  sakura.toml  shinkai.toml  snow.toml  status_cluster.toml  status_cluster_color.toml  wifi.toml
docs/plans/: auth-polish.md  blur.md  clickable-plugins.md  hero-deepfield.md  index.md  markup-icon.md  markup-padding-per-axis.md  now-playing-star-condensed-region.md  python-sdk.md  text-scale.md  veiland-shader.md  widget-roadmap.md
nix/: module.nix
packaging/: README.md  veiland.example.toml
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules  veiland.install  veiland.pam
packaging/pam/: veiland.system-auth
packaging/rpm/: veiland.spec
plugins/blobs/: Cargo.toml
plugins/blobs/src/: main.rs
plugins/blue-box/: Cargo.toml
plugins/blue-box/src/: main.rs
plugins/clock/: Cargo.toml
plugins/clock/src/: main.rs
plugins/embers/: Cargo.toml
plugins/embers/src/: main.rs
plugins/fireflies/: Cargo.toml
plugins/fireflies/src/: main.rs
plugins/gradient/: Cargo.toml
plugins/gradient/src/: main.rs
plugins/green-box/: Cargo.toml
plugins/green-box/src/: main.rs
plugins/label/: Cargo.toml
plugins/label/src/: main.rs
plugins/parallax/: Cargo.toml
plugins/parallax/src/: main.rs
plugins/particles/: Cargo.toml
plugins/particles/src/: main.rs
plugins/rain/: Cargo.toml
plugins/rain/src/: main.rs
plugins/raymarcher/: Cargo.toml
plugins/raymarcher/src/: main.rs
plugins/red-box/: Cargo.toml
plugins/red-box/src/: main.rs
plugins/sakura/: Cargo.toml
plugins/sakura/scripts/: make_petal.py
plugins/sakura/src/: main.rs
plugins/snow/: Cargo.toml
plugins/snow/src/: main.rs
plugins/stress/: Cargo.toml
plugins/stress/src/: main.rs
plugins/vignette/: Cargo.toml
plugins/vignette/src/: main.rs
plugins/wallpaper/: Cargo.toml
plugins/wallpaper/src/: main.rs
poc/: Makefile  README.md  consumer.c  producer.c
python/: pyproject.toml  veiland_dbus.py  veiland_layout.py  veiland_plugin.py  veiland_svg.py  veiland_text.py
python/examples/: avatar.py  battery.py  battery_cairo.py  battery_svg.py  bluetooth.py  ethernet.py  markup.py  now_playing.py  wifi.py
python/examples/icons/: README
python/tests/: conftest.py  test_buffer_chain.py  test_codec.py  test_dbus.py  test_layout.py  test_svg.py
scripts/: gen-plugins-md.py  record-scene.sh  record-shinkai.sh
scripts/git-hooks/: pre-commit  pre-push
scripts/record/: scene.sh  shinkai.sh
scripts/record/showcase/: clock.toml  particles.toml  vignette.toml  wallpaper.toml
scripts/vmtest/: README.md  arch.sh  build-arch.sh  build-deb.sh  build-rpm.sh  debian.sh  fedora.sh
site/: .gitignore  README.md  build.sh  config.toml  prepare.sh  serve.sh
site/content/docs/: _index.md  getting-started.md  writing-plugins.md
site/content/docs/plugins/: _index.md  blobs.md  clock.md  embers.md  fireflies.md  gradient.md  label.md  parallax.md  particles.md  rain.md  raymarcher.md  sakura.md  snow.md  vignette.md  wallpaper.md
site/static/: landing.js  previews.js  site.css
site/templates/: base.html  docs-page.html  index.html  macros.html  plugins-section.html
veiland-core/: Cargo.toml  build.rs
veiland-core/src/: config.rs  default-scene.toml  gl_debug.rs  main.rs  region.rs  renderer.rs
veiland-core/src/app/: compositor.rs  fractional_scale.rs  input.rs  lock.rs  mod.rs  output.rs
veiland-core/src/auth/: mod.rs
veiland-core/src/plugin/: connection.rs  dmabuf.rs  error.rs  host_spawn.rs  mod.rs  slot.rs  spawn.rs  state.rs  sync.rs
veiland-plugin/: Cargo.toml  README.md
veiland-plugin/examples/: smoke.rs
veiland-plugin/src/: buffer.rs  config.rs  error.rs  gl.rs  lib.rs  lifecycle.rs  math.rs  render.rs  socket.rs  sync.rs
veiland-plugin/tests/: loopback.rs  sync.rs
veiland-protocol/: Cargo.toml  README.md
veiland-protocol/fuzz/: Cargo.toml
veiland-protocol/fuzz/fuzz_targets/: client_decode.rs  server_decode.rs
veiland-protocol/src/: client.rs  codec.rs  error.rs  lib.rs  server.rs  types.rs
veiland-text/: Cargo.toml
veiland-text/src/: atlas.rs  label.rs  lib.rs
