[workspace]
resolver = "3"
members = [
    "plugins/blue-box",
    "plugins/clock",
    "plugins/gradient",
    "plugins/green-box",
    "plugins/label",
    "plugins/particles",
    "plugins/red-box",
    "plugins/stress",
    "plugins/vignette",
    "plugins/wallpaper",
    "veiland-core",
    "veiland-plugin",
    "veiland-protocol",
    "veiland-text",
]

# Password buffer hygiene depends on Drop running on panic. Setting
# panic = "abort" anywhere would skip Session::zeroize on the way to
# _exit. Pin explicitly — the Rust default is already unwind, but a
# future maintainer should see this is a load-bearing choice.
[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
