[workspace]
resolver = "3"
members = [
    "plugins/blobs",
    "plugins/clock",
    "plugins/embers",
    "plugins/fireflies",
    "plugins/gradient",
    "plugins/label",
    "plugins/parallax",
    "plugins/particles",
    "plugins/rain",
    "plugins/raymarcher",
    "plugins/sakura",
    "plugins/snow",
    "plugins/stress",
    "plugins/vignette",
    "plugins/wallpaper",
    "veiland-core",
    "veiland-plugin",
    "veiland-protocol",
    "veiland-text",
]

# The fuzz crate is its own workspace root (nightly + libfuzzer only).
# Exclude it explicitly so a stray `cargo` invocation at the repo root
# never tries to build it against the stable toolchain.
exclude = [
    "veiland-protocol/fuzz",
]

# Password buffer hygiene depends on Drop running on panic. Setting
# panic = "abort" anywhere would skip Session::zeroize on the way to
# _exit. Pin explicitly — the Rust default is already unwind, but a
# future maintainer should see this is a load-bearing choice.
[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
