[package]
name = "veiland-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Wayland screen locker with process-isolated GPU plugins"
repository = "https://github.com/sylflo/veiland"
publish = false

[dependencies]
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["client", "staging"] }
