[package]
name = "veiland-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Wayland screen locker with process-isolated GPU plugins"
repository = "https://github.com/sylflo/veiland"
publish = false

[dependencies]
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.14"
wayland-egl = "0.32"
khronos-egl = { version = "6", features = ["static"] }
gl = "0.14"
nix = { version = "0.31", features = ["fs", "process", "mman", "signal", "socket", "uio"] }
veiland-protocol = { path = "../veiland-protocol" }
zeroize = "1.8.2"