[package]
name = "veiland-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Wayland screen locker with process-isolated GPU plugins"
repository = "https://github.com/sylflo/veiland"
publish = false

[features]
default = []
# Lets Escape unlock without authentication. Useful while iterating on
# veiland itself. Must not be enabled in distributed builds.
debug-unlock = []

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
smithay-client-toolkit = "0.20.0"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-client = "0.31.14"
wayland-egl = "0.32"
khronos-egl = { version = "6", features = ["static"] }
gl = "0.14"
nix = { version = "0.31", features = ["fs", "process", "mman", "signal", "socket", "uio", "user"] }
pam-client2 = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
veiland-protocol = { path = "../veiland-protocol" }
# Text rendering for the password field's placeholder. The same crate
# the reference plugins use; it pulls in cosmic-text + fontdb. Adding it
# here puts a font stack inside the trusted core, which scans system
# fonts at startup — see docs/config.md's [password] notes for the
# threat-model tradeoff (low risk: fonts are static data, never executed).
veiland-text = { path = "../veiland-text" }
zeroize = "1.8.2"

[dev-dependencies]
# For tests/sync.rs: bootstrap a self-contained EGL/GBM/GL stack so the
# fence import/wait round-trip can be exercised without a Wayland host.
gbm = "0.18"
