[package]
name = "veiland-blobs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Reference plugin — large soft colored blobs drifting slowly (metaball field)."
repository = "https://github.com/sylflo/veiland"
publish = false

[dependencies]
gl = "0.14"
serde = { version = "1.0.228", features = ["derive"] }
veiland-plugin = { path = "../../veiland-plugin" }
veiland-protocol = { path = "../../veiland-protocol" }
