[package]
name = "veiland-clock"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Reference plugin — renders the time and date as two veiland-text labels."
repository = "https://github.com/sylflo/veiland"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
gl = "0.14"
serde = { version = "1.0.228", features = ["derive"] }
veiland-plugin = { path = "../../veiland-plugin" }
veiland-protocol = { path = "../../veiland-protocol" }
veiland-text = { path = "../../veiland-text" }
