[package]
name = "veiland-red-box"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Throwaway test plugin — fills its region with red at ~78% opacity. Validates the host's compositor and straight-alpha blending; not a reference plugin."
repository = "https://github.com/sylflo/veiland"
publish = false

[dependencies]
gl = "0.14"
veiland-plugin = { path = "../../veiland-plugin" }
veiland-protocol = { path = "../../veiland-protocol" }
