[package]
name = "veiland-sakura"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Reference plugin — falling cherry-blossom petals (textured, tumbling)."
repository = "https://github.com/sylflo/veiland"
publish = false

[dependencies]
gl = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
veiland-plugin = { path = "../../veiland-plugin" }
veiland-protocol = { path = "../../veiland-protocol" }
