[package]
name = "veiland-wallpaper"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "M11 reference plugin — displays a single fixed image as the lock-surface background."
repository = "https://github.com/sylflo/veiland"
publish = false

[dependencies]
gl = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
veiland-plugin = { path = "../../veiland-plugin" }
veiland-protocol = { path = "../../veiland-protocol" }
