[package]
name = "veiland-wallpaper"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Reference plugin — displays a single fixed image as the lock-surface background."
repository = "https://github.com/sylflo/veiland"
publish = false

[dependencies]
gl = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
turbojpeg = { version = "1.3", default-features = false, features = ["pkg-config"] }
veiland-plugin = { path = "../../veiland-plugin" }
veiland-protocol = { path = "../../veiland-protocol" }
